# slang

./: .gitignore  CMakeLists.txt  flake.nix  main.cpp  test.sh
ast/: ast.cpp
example/: main.sl
include/: chartype.h  environ.h  libiberty.h  system.h
include/Scanner/: scanner.h  token.h
include/ast/: ast.h
include/spp/: internal.h  lex.cpp  line_maps.h  spp_reader.h  spp_trie.h  spplib.h  symtab.h  ttype_table.h
libiberty/: xexit.c  xmalloc.c  xmemdup.c
spp/: _spp_buf.cpp  cpp_identifier.cpp  cpp_string.cpp  spp_buffer.cpp  spp_file.cpp  spp_reader.cpp
src/: main.cpp
system/: system.cpp
